All core and serialization unit tests pass. Needed to support null values for toImmutable*